iptables.up.rules
# Generated by iptables-save v1.4.14 on Tue Nov 26 02:14:52 2019
*filter
:INPUT DROP [2438:294021]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [959:46984]
-A INPUT -s 10.249.30.200/32 -p tcp -m tcp --dport 2222 -j ACCEPT
-A INPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A INPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.249.30.200/32 -p tcp -m tcp --dport 2222 -j ACCEPT
-A OUTPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A OUTPUT -s 10.224.110.124/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.125/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.127/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.128/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.129/32 -p tcp -m tcp --dport 9300 -j ACCEPT
-A OUTPUT -s 10.224.110.126/32 -p tcp -m tcp --dport 5432 -j ACCEPT
COMMIT
# Completed on Tue Nov 26 02:14:52 2019
